--- a/index.css
+++ b/index.css
@@ -6,6 +6,9 @@
     margin-left: 30px;
 
 }
+.group{
+    margin-left: 40px;
+}
 
 
 #right{
@@ -17,6 +20,13 @@
 #item{
     margin-left: 50px;
 }
+
+#item:hover{
+    cursor: pointer;
+    
+}
+
+
 .end{
     background-color: #EFF3F4;
     height: 600px;
